--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,7 @@ services:
   - docker
   
 after_success:
-- docker login -u $DOCKER_USER -p $DOCKER_PASS
+
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH; fi`
 - export IMAGE_NAME=pbhat080513/travis-ci-test
-- docker build -t $IMAGE_NAME:$COMMIT .
-- docker tag $IMAGE_NAME:$COMMIT $IMAGE_NAME:$TAG
-- docker push $IMAGE_NAME
+- docker build -t $IMAGE_NAME:$COMMIT
