--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ after_success:
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH; fi`
 - export IMAGE_NAME=pbhat080513/travis-ci-test
 - docker build -t $IMAGE_NAME:$COMMIT
+- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+- docker push $IMAGE_NAME
