--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ after_success:
 
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH; fi`
 - export IMAGE_NAME=pbhat080513/travis-ci-test
-- docker build -t $IMAGE_NAME
+- docker build -t pbhat080513/travis-ci-test .
 - docker tag $IMAGE_NAME:$COMMIT $IMAGE_NAME:$TAG
-- echo $root
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 - docker push $IMAGE_NAME
