--- a/dockerFile
+++ b/dockerFile
@@ -1,5 +1,7 @@
-FROM openjdk:8-jre
-MAINTAINER prajwbhat@deloitte.com
-EXPOSE 8080
-ENTRYPOINT ["java","-jar","C:\Users\prajwbhat\Massage_Envy\travis-test\target\travis-docker-0.0.1-SNAPSHOT.jar"]
-
+FROM openjdk:8-jre-alpine
+VOLUME /tmp
+ADD target/travis-docker-0.0.1-SNAPSHOT.jar app.jar
+RUN sh -c 'touch /app.jar'
+ENV JAVA_OPTS="-Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=8787,suspend=n"
+EXPOSE 8080 8787
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -Dspring.profiles.active=docker -jar /app.jar" ]
