--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,17 @@
         </archive>
       </configuration>
     </plugin>
+	<plugin>
+   <groupId>com.spotify</groupId>
+   <artifactId>dockerfile-maven-plugin</artifactId>
+   <version>1.4.9</version>
+   <configuration>
+      <repository>${docker.image.prefix}/${project.artifactId}</repository>
+      <buildArgs>
+         <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+      </buildArgs>
+   </configuration>
+</plugin>
   </plugins>
 </build>
 	<dependencies>
@@ -46,5 +57,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.spotify/docker-maven-plugin -->
 	</dependencies>
 </project>
