--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,14 @@ language: java
 services:
   - docker
   
+script:
+- ./mvnw clean install -B
+  
 after_success:
 
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH; fi`
 - export IMAGE_NAME=prajwalBhat1/travis-test
-- docker build -t $IMAGE_NAME:$COMMIT 
+- docker build -t $IMAGE_NAME:$COMMIT   
 - docker tag $IMAGE_NAME:$COMMIT $IMAGE_NAME:$TAG
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 - docker push $IMAGE_NAME
