--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,6 @@ services:
 after_success:
 
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH; fi`
-- export IMAGE_NAME= "https://github.com/prajwalBhat1/travis-test.git"
-- docker build  $IMAGE_NAME
-- docker tag $IMAGE_NAME "pbhatimage"
+- docker build  https://github.com/prajwalBhat1/travis-test.git -t pbhat080513/travis-ci-test
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-- docker push $IMAGE_NAME
+- docker push pbhat080513/travis-ci-test:latest
