--- a/DockerFile
+++ b/DockerFile
@@ -1,7 +1,6 @@
 FROM openjdk:8-jre-alpine
-VOLUME /tmp 
-ADD target/travis-docker-0.0.1-SNAPSHOT.jar app.jar
-RUN sh -c 'touch /app.jar'
-ENV JAVA_OPTS="-Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=8787,suspend=n"
-EXPOSE 8080 8787
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -Dspring.profiles.active=docker -jar /app.jar" ]
+ENV APP_ROOT /app
+RUN mkdir ${APP_ROOT}
+WORKDIR ${APP_ROOT}
+COPY target/*.jar ${APP_ROOT}/run.jar
+ENTRYPOINT ["java", "-jar", "run.jar"]
