--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ after_success:
 
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH; fi`
 - export IMAGE_NAME=pbhat080513/travis-ci-test
-- docker build -t $IMAGE_NAME:latest .
+- docker build /home/travis/build/prajwalBhat1/travis-test -t $IMAGE_NAME:latest
 - docker tag $IMAGE_NAME:latest $IMAGE_NAME:$TAG
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 - docker push $IMAGE_NAME
