--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,4 @@ after_success:
 - docker tag $IMAGE_NAME:latest $IMAGE_NAME:$TAG
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 - docker push $IMAGE_NAME
+- docker run -p 8080:8080 $IMAGE_NAME
