--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,18 @@ after_success:
 - docker save $IMAGE_NAME:latest | gzip > latest.tar.gz
 
 
+before_deploy:
+  - mkdir -p dpl_cd_upload
+  - mv latest.zip dpl_cd_upload/latest.zip
+
+
 deploy:
   - provider: s3
+    region: ap-south-1
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     local_dir: dpl_cd_upload
+    upload_dir: dpl_cd_upload
     skip_cleanup: true
     on: &2
       repo: prajwalBhat1/travis-test
