--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ after_success:
 
 before_deploy:
   - mkdir -p dpl_cd_upload
-  - mv latest.zip dpl_cd_upload/latest.zip
+  - mv latest.tar.gz dpl_cd_upload/latest.tar.gz
 
 
 deploy:
