--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,13 @@ after_success:
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 - docker push $IMAGE_NAME
 - docker save $IMAGE_NAME:latest | gzip > latest.tar.gz
+- mkdir -p dpl_cd_upload
+- mv latest.tar.gz dpl_cd_upload/latest.tar.gz
 
 
-before_deploy:
-  - mkdir -p dpl_cd_upload
-  - mv latest.tar.gz dpl_cd_upload/latest.tar.gz
+#before_deploy:
+ # - mkdir -p dpl_cd_upload
+ # - mv latest.tar.gz dpl_cd_upload/latest.tar.gz
 
 
 deploy:
