--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ services:
   
 before_install:
   - docker pull openjdk:8-jdk-alpine
-  - base64 -d my-ec2-key-pair_64 > ./deploy_key
-  - ssh -i "deploy_key" ec2-user@ec2-13-233-206-157.ap-south-1.compute.amazonaws.com
+  - base64 -d my-ec2-key-pair_64 > /home/travis/build/prajwalBhat1/travis-test/deploy_key
   
 after_success:
 
@@ -17,6 +16,10 @@ after_success:
 - docker tag $IMAGE_NAME:latest $IMAGE_NAME:$TAG
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 - docker push $IMAGE_NAME
+- eval "$(ssh-agent -s)"
+- chmod 600 /home/travis/build/prajwalBhat1/travis-test/deploy_key
+- ssh-add /home/travis/build/prajwalBhat1/travis-test/deploy_key
+- scp file -i "deploy_key" ec2-user@ec2-13-233-206-157.ap-south-1.compute.amazonaws.com:$IMAGE_NAME
 - docker save $IMAGE_NAME:latest | gzip > latest.tar.gz
 - mkdir -p dpl_cd_upload
 - mv latest.tar.gz dpl_cd_upload/latest.tar.gz
