--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - base64 -d my-ec2-key-pair_64 > /home/travis/build/prajwalBhat1/travis-test/deploy_key
   - chmod 600 /home/travis/build/prajwalBhat1/travis-test/deploy_key
   - ssh-add /home/travis/build/prajwalBhat1/travis-test/deploy_key
-  - echo -e "Host ec2-13-233-206-157.ap-south-1.compute.amazonaws.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+  #- echo -e "Host ec2-13-233-206-157.ap-south-1.compute.amazonaws.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   
 after_success:
 
