--- a/.travis.yml
+++ b/.travis.yml
@@ -21,38 +21,12 @@ after_success:
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 - docker push $IMAGE_NAME
 - cd /home/travis/build/prajwalBhat1/travis-test/
-- scp file -i "deploy_key" ec2-user@ec2-13-233-206-157.ap-south-1.compute.amazonaws.com:$IMAGE_NAME:latest
 - docker save $IMAGE_NAME:latest | gzip > latest.tar.gz
-- mkdir -p dpl_cd_upload
-- mv latest.tar.gz dpl_cd_upload/latest.tar.gz
-
+- scp file -i "deploy_key" ec2-user@ec2-13-233-206-157.ap-south-1.compute.amazonaws.com:latest.tar.gz
 
 #before_deploy:
  # - mkdir -p dpl_cd_upload
  # - mv latest.tar.gz dpl_cd_upload/latest.tar.gz
-
-
-deploy:
-  - provider: s3
-    region: ap-south-1
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY
-    local_dir: dpl_cd_upload
-  #  upload_dir: dpl_cd_upload
-    skip_cleanup: true
-    on: &2
-      repo: prajwalBhat1/travis-test
-    bucket: travis-bucket-2
-  - provider: codedeploy
-    region: ap-south-1
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY
-    bucket: travis-bucket-2
-    key: latest.tar.gz
-    bundle_type: tgz
-    application: travis-test-code-deploy
-    deployment_group: travis-deployment-group
-    on: *2
 
 #script:
  # - mkdir -p dpl_cd_upload
