--- a/.travis.yml
+++ b/.travis.yml
@@ -36,11 +36,11 @@ after_success:
 deploy:
   - provider: script
     skip_cleanup: true
-    script: ssh -i "deploy_key" ec2-user@ec2-13-233-206-157.ap-south-1.compute.amazonaws.com
+    script: ssh -i "deploy_key" ec2-user@ec2-13-233-206-157.ap-south-1.compute.amazonaws.com 'docker pull pbhat080513/travis-ci-test:latest | docker run pbhat080513/travis-ci-test:latest'
     on:
       branch: master
-  - provider: script
-    skip_cleanup: true
-    script: docker pull pbhat080513/travis-ci-test:latest
-    on:
-      branch: master
+#  - provider: script
+#    skip_cleanup: true
+#    script: docker pull pbhat080513/travis-ci-test:latest
+#    on:
+#      branch: master
