--- a/.travis.yml
+++ b/.travis.yml
@@ -28,3 +28,8 @@ deploy:
     script: ssh -i "deploy_key" ec2-user@ec2-13-233-206-157.ap-south-1.compute.amazonaws.com 'docker pull pbhat080513/travis-ci-test:latest | docker run pbhat080513/travis-ci-test:latest'
     on:
       branch: master
+  - provider: script
+    skip_cleanup: true
+    script: travis_terminate 1
+    on:
+      branch: master
