--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,10 @@ deploy:
   - provider: script
     skip_cleanup: true
    # script: ssh -i "deploy_key" ec2-user@ec2-13-233-206-157.ap-south-1.compute.amazonaws.com 'docker pull pbhat080513/travis-ci-test:latest | docker run pbhat080513/travis-ci-test:latest'
-    script : ./deploy_script.sh
+    script : ssh -i "deploy_key" ec2-user@ec2-13-233-206-157.ap-south-1.compute.amazonaws.com << EOF
+             docker pull pbhat080513/travis-ci-test:latest
+             docker run pbhat080513/travis-ci-test:latest
+             exit
+             EOF
     on:
       branch: master
