--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ after_success:
 deploy:
   - provider: script
     skip_cleanup: true
-    script: ssh -i "deploy_key" ec2-user@ec2-13-233-206-157.ap-south-1.compute.amazonaws.com 'docker pull pbhat080513/travis-ci-test:latest | docker run -d pbhat080513/travis-ci-test:latest'
+    script: ssh -i "deploy_key" ec2-user@ec2-13-233-206-157.ap-south-1.compute.amazonaws.com 'docker pull pbhat080513/travis-ci-test:latest | docker start -d pbhat080513/travis-ci-test:latest'
     on:
       branch: master
