--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 addons:
-  ssh_known_hosts: ec2-13-233-206-157.ap-south-1.compute.amazonaws.com
+  ssh_known_hosts: ec2-13-235-238-13.ap-south-1.compute.amazonaws.com
   
 before_install:
   - docker pull openjdk:8-jdk-alpine
@@ -13,7 +13,7 @@ before_install:
   - eval "$(ssh-agent -s)"
   - chmod 600 /home/travis/build/prajwalBhat1/travis-test/deploy_key
   - ssh-add /home/travis/build/prajwalBhat1/travis-test/deploy_key
-  - echo -e "Host ec2-13-233-206-157.ap-south-1.compute.amazonaws.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+  - echo -e "Host ec2-13-235-238-13.ap-south-1.compute.amazonaws.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   
 after_success:
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH; fi`
@@ -25,6 +25,6 @@ after_success:
 deploy:
   - provider: script
     skip_cleanup: true
-    script: ssh -i "deploy_key" ec2-user@ec2-13-233-206-157.ap-south-1.compute.amazonaws.com 'docker pull pbhat080513/travis-ci-test:latest | docker start -d pbhat080513/travis-ci-test:latest'
+    script: ssh -i "deploy_key" ec2-user@ec2-13-235-238-13.ap-south-1.compute.amazonaws.com 'docker stop travis-test | docker container rm travis-test | docker run --name travis-test -d pbhat080513/travis-ci-test:latest'
     on:
       branch: master
