--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,11 @@ after_success:
 deploy:
   - provider: script
     skip_cleanup: true
-    script: ssh -i "deploy_key" ec2-user@ec2-13-235-238-13.ap-south-1.compute.amazonaws.com 'docker stop travis-test || true && docker rm travis-test || true | docker run --name travis-test -d pbhat080513/travis-ci-test:latest'
+    script: ssh -i "deploy_key" ec2-user@ec2-13-235-238-13.ap-south-1.compute.amazonaws.com 'docker stop travis-test || true && docker rm travis-test || true'
+    on:
+      branch: master
+  - provider: script
+    skip_cleanup: true
+    script: ssh -i "deploy_key" ec2-user@ec2-13-235-238-13.ap-south-1.compute.amazonaws.com 'docker run --name travis-test -d pbhat080513/travis-ci-test:latest'
     on:
       branch: master
