--- a/.travis.yml
+++ b/.travis.yml
@@ -33,3 +33,8 @@ deploy:
     script: ssh -i "deploy_key" ec2-user@ec2-13-235-238-13.ap-south-1.compute.amazonaws.com 'echo "deploying travis-test again" | docker run --name travis-test -d pbhat080513/travis-ci-test:latest'
     on:
       branch: master
+  - provider: script
+    skip_cleanup: true
+    script: ssh -i "deploy_key" ec2-user@ec2-13-235-238-13.ap-south-1.compute.amazonaws.com 'echo "check logs after deployment...." | docker container logs travis-test'
+    on:
+      branch: master
